test 3/grammar.txt
expr            :   KEYWORD:VAR IDENTIFIER (EQ|MULE|PLUSE|DIVE|MINUSE) expr
                :   comp-expr ((KEYWORD:AND|KEYWORD:OR) comp-expr)*

comp-expr       :   NOT comp-expr
                :   arith-expr ((EE|NE|GT|LT|LTE|GTE) artih-expr)*
        
arith-expr      :   term ((PLUS|MINUS) term)*

term            :   factor ((PLUS|MINUS) factor)*

factor          :   (PLUS|MINUS) power

power           :   atom (POW, factor)*

atom            :   FLOAT|INT|IDENTIFIER
                :   LPAREN expr RPAREN
                :   if-expr
                :   for-expr
                :   while-expr

if-expr         :   KEYWORD:IF expr ARROW expr
                    (KEYWORD:ELIF expr ARROW expr)*
                    (KEYWORD:ELSE ARROW)?

for-expr        :   KEYWORD:FOR IDENTIFIER LPAREN expr KEYWORD:TO expr RPAREN (KEYWORD:STEP expr)? PIPE expr PIPE
                :   for i(1 to 6) step 1 | var res =  res + 1 |

while-expr      :   KEYWORD:WHILE expr ARROW expr
